--- a/página  Gama academy/styles.css
+++ b/página  Gama academy/styles.css
@@ -1,6 +1,10 @@
-.container{
-    display: flex ;
-    justify-content: space-around;
+.container-fluid{
+    /* display: flex ; */
+    justify-content: space-between;
     background-color: blueviolet;
     padding-top: 20px;
+    padding-bottom: 20px;
+}
+#tabela{
+    border: 1px rgb(0, 0, 0);
 }
